# miyo-tomo

./: .gitignore  CLAUDE.md  README.md  begin-tomo.sh  pyproject.toml  test-fixtures.md  tomo-logo.txt
.claude/: settings.json
.githooks/: pre-push
_inbox/: from-kado  from-kokoro  from-kouzou  from-seigyo
assets/: logo-tomo-113.txt  tomo-logo-200.txt  tomo-small-logo-50-2.txt  tomo-small-logo-50.txt
docker/: Dockerfile  entrypoint.sh
docs/: CLAUDE.md  instructions-json.md  setup.md  template-syntax.md  troubleshooting.md
scripts/: CLAUDE.md  backup-tomo.sh  begin-tomo.sh.template  cache-builder.py  cleanup-tomo.sh  download-whisper-model.sh  install-tomo.sh  instruction-render.py  instructions-diff.py  instructions-dryrun.py  kado-write-file.py  moc-tree-builder.py  read-config-field.py  restore-tomo.sh  run-id.py  shared-ctx-builder.py  state-init.py  state-scanner.py  state-update.py  suggestion-parser.py  suggestions-reducer.py  suggestions-render.py  tag-captured.py  template-from-schema.py  test-004-phase2.sh  test-004-phase3.sh  test-004-phase4.sh  test-005-phase1.sh  test-005-phase2.sh  test-005-phase3.sh  test-005-phase4.sh  test-005-phase5.sh  test-008-phase1.py  test-instructions-diff.py  test-kado.py  test-phase1.sh  test-phase2.sh  test-phase3.sh  test-shared-ctx-tags.py  test-splash.sh  (+10 more)
tests/: test-004-phase2.sh  test-004-phase3.sh  test-004-phase4.sh  test-005-phase1.sh  test-005-phase2.sh  test-005-phase3.sh  test-005-phase4.sh  test-005-phase5.sh  test-008-phase1.py  test-instructions-diff.py  test-kado.py  test-phase1.sh  test-phase2.sh  (+8 more)
(+297 files in other folders)
