# Project metadata kept intentionally minimal — Tomo doesn't ship as a
# Python package. This file exists so pytest can register custom markers
# and avoid noisy "unknown mark" warnings in the voice test suite, and
# to pin the minimum Python version that the runtime scripts assume.

[project]
name = "miyo-tomo"
# Runtime scripts use `str.removeprefix` (Python 3.9+). Flagged by the
# review as a latent failure mode for developers running older system
# Python — explicit declaration so type-checkers and editors warn rather
# than shrug. The Docker runtime ships Python 3.11, so this is a floor
# for host-side dev only.
requires-python = ">=3.9"
version = "0.0.0"

[tool.pytest.ini_options]
markers = [
    "voice_model: tests that require a faster-whisper model dir + the faster_whisper dep (opt-in via TOMO_TEST_MODEL_DIR)",
]
